--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "alibabacloud/viapi-utils",
+  "name": "alibabacloud/viapi-tool",
   "description": "Alibaba Cloud Viapiutils Tool Library for PHP",
   "type": "library",
   "license": "Apache-2.0",
@@ -15,7 +15,7 @@
   },
   "autoload": {
     "psr-4": {
-      "AlibabaCloud\\SDK\\ViapiUtils\\": "src"
+      "AlibabaCloud\\SDK\\ViapiTool\\": "src"
     }
   },
   "scripts": {
